src/objects/A__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>As</relationshipLabel>
        <relationshipName>As</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text_field__c</fullName>
        <label>Text field</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>est__c</fullName>
        <label>est</label>
        <picklist>
            <picklistValues>
                <fullName>1111111111111111111111111111111111111111111111111111111111111111111111122222222222222222222222222222222222222222222222222222222222222</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>testing_profile__c</fullName>
        <label>testing profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>A</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>First_Queue_A</fullName>
        <filterScope>Queue</filterScope>
        <label>First Queue</label>
        <queue>First_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>test1_A</fullName>
        <filterScope>Queue</filterScope>
        <label>test1</label>
        <queue>test1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>A Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>As</pluralLabel>
    <recordTypes>
        <fullName>test</fullName>
        <active>true</active>
        <label>test</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>